--- a/smart_contracts/basic_example/style.css
+++ b/smart_contracts/basic_example/style.css
@@ -62,10 +62,15 @@ ul {
   width: max-content;
 }
 
-.redacted:hover {
+.r:hover {
   cursor: none;
   background: white;
 }
+
+.copy {
+  font-size: .9em;
+}
+
 
 .copy::after {
   content: "[copy]";
