--- a/erc20_demo_prep/style.css
+++ b/erc20_demo_prep/style.css
@@ -8,15 +8,26 @@ body {
   font-family: 'Staatliches', cursive;
   color: white;
   font-weight: 100;
+  overflow-x: hidden;
+}
+
+body:hover {
+  cursor: url("cursors/flag-cursor64.png"), pointer;
+}
+
+#sketch {
+  width: clamp(320px, 90vw, 640px);
+  height: clamp(240px, 90vw, 480px);
+  background: black;
+  margin: 0 auto;
 }
 
 .patriotic-text {
   text-align: center;
-  margin: 10vmin;
-  font-size: 36px;
+  margin: 4vmin;
+  font-size: 28px;
   position: relative;
 }
-
 
 .patriotic-text > * {
   color: red;
@@ -37,11 +48,8 @@ body {
   margin: 0 12px;
 }
 
-@keyframes flourish {
-  0% {color: red; -webkit-text-stroke: 2px white;}
-  45% {color: red; -webkit-text-stroke: 2px white;}
-  55% {color: blue; -webkit-text-stroke: 2px white;}
-  100% {color: blue; -webkit-text-stroke: 2px white;}
+.twirl {
+  animation: twirl 5s infinite alternate linear;
 }
 
 #myVideo {
@@ -51,4 +59,20 @@ body {
   min-width: 100%;
   min-height: 100%;
   z-index: -1;
+}
+
+@keyframes flourish {
+  0% {color: red; -webkit-text-stroke: 2px white;}
+  45% {color: red; -webkit-text-stroke: 2px white;}
+  55% {color: blue; -webkit-text-stroke: 2px white;}
+  100% {color: blue; -webkit-text-stroke: 2px white;}
+}
+
+@keyframes twirl {
+  0% {transform: rotateY(0deg) scale(1);}
+  20% {transform: rotateY(0deg) scale(1);}
+  50% {transform: rotateY(360deg) scale(1);}
+  80% {transform: rotateY(360deg) scale(1);}
+  90% {transform: rotateY(360deg) scale(2);}
+  100% {transform: rotateY(360deg) scale(1);}
 }
