--- a/erc20_demo_prep/style.css
+++ b/erc20_demo_prep/style.css
@@ -65,6 +65,24 @@ body:hover {
   z-index: -1;
 }
 
+#patriot-confirmed {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  font-size: 22vmin;
+  color: red;
+  -webkit-text-stroke: 3px white;
+  text-align: center;
+  animation: confirmed .4s infinite linear;
+  display: none;
+}
+
+@keyframes confirmed {
+  0% {color: red; transform: translate(-50%, -50%) scale(1)}
+  50% {color: white; transform: translate(-50%, -50%) scale(1.05)}
+  100% {color: blue; transform: translate(-50%, -50%) scale(1)}
+}
+
 @keyframes flourish {
   0% {color: red; -webkit-text-stroke: 2px white;}
   45% {color: red; -webkit-text-stroke: 2px white;}
