--- a/erc721/ColorTokenDoug/style.css
+++ b/erc721/ColorTokenDoug/style.css
@@ -95,6 +95,8 @@ body {
   background: white;
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
+  flex-wrap: wrap;
 }
 
 #owned__title {
@@ -104,11 +106,8 @@ body {
 
 #owned__send {
   font-family: 'Quicksand', sans-serif;
-  font-size: 1.25vmin;
+  font-size: clamp(12px, 1.25vmin, 20px);
   font-weight: 400;
-  display: block;
-  border: none;
-  background: none;
 }
 
 .color-gallery {
@@ -121,6 +120,7 @@ body {
   margin: clamp(.75em, 2vmin, 3em);
   box-shadow: 1px 1px 3px darkgray;
   flex: 0.5 1 250px;
+  max-width: 250px;
   transition: box-shadow .15s, transform .15s;
 }
 .color-token:hover {
@@ -191,7 +191,7 @@ body {
 .send-modal__close {
   align-self: flex-end;
   width: max-content;
-  font-size: .75em;
+  font-size: clamp(14px, .75em, 20px);
 }
 
 .send-modal__close:hover {
@@ -218,7 +218,7 @@ input {
   border-radius: 2vmin;
   padding: .5vmin;
   border: 1px solid darkgray;
-  font-size: 1.5vmin;
+  font-size: clamp(14px, 1.5vmin, 18px);
 }
 
 .send-modal__btn:active {
@@ -231,11 +231,15 @@ input {
   position: absolute;
   right: 2.5vmin;
   display: none;
+  font-size: .75em;
+  margin-top: .75em;
 }
 
 #invalid-token {
   color: #f55;
   position: absolute;
   right: 2.5vmin;
+  margin-top: .75em;
   display: none;
+  font-size: .75em;
 }
